# ai-consensus-core

./: README.md  pyproject.toml
examples/: basic_usage.py  customer_churn_example.py  demand_forecast_example.py  equipment_maintenance_example.py  hiring_pipeline_example.py  single_provider_structured_response.py
examples/prompts/: default_system.md  default_user.md  openai_system_alt.md  openai_user_alt.md
src/ai_consensus_core/: __init__.py
src/ai_consensus_core/config/: loader.py
src/ai_consensus_core/consensus/: base.py  weighted.py
src/ai_consensus_core/core/: client.py
src/ai_consensus_core/logging/: artifacts.py
src/ai_consensus_core/models/: config.py  contracts.py
src/ai_consensus_core/prompts/: registry.py
src/ai_consensus_core/providers/: base.py  factory.py  http_providers.py
