[project]
name = "ai-consensus-core"
version = "0.1.0"
description = "Reusable multi-provider AI client with unified models and consensus estimation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_consensus_core"]
